# poly-commit

./: .gitignore  .travis.yml  AUTHORS  CHANGELOG.md  Cargo.toml  README.md
.github/: CODEOWNERS
.github/workflows/: ci.yml  linkify_changelog.yml
bench-templates/: Cargo.toml
bench-templates/src/: lib.rs
benches/: benches.rs  benches_size.rs
pcs/benches/: pcs.rs  size.rs
poly-commit/: Cargo.toml  README.md
poly-commit/benches/: brakedown_ml_times.rs  hyrax_times.rs  ipa_times.rs  ligero_ml_times.rs  pcs.rs  size.rs
poly-commit/src/: challenge.rs  constraints.rs  data_structures.rs  error.rs  lib.rs  optional_rng.rs  utils.rs
poly-commit/src/hyrax/: data_structures.rs  mod.rs  tests.rs  utils.rs
poly-commit/src/ipa_pc/: data_structures.rs  mod.rs
poly-commit/src/kzg10/: data_structures.rs  mod.rs
poly-commit/src/linear_codes/: brakedown.rs  data_structures.rs  ligero.rs  mod.rs  utils.rs
poly-commit/src/linear_codes/multilinear_brakedown/: mod.rs  tests.rs
poly-commit/src/linear_codes/multilinear_ligero/: mod.rs  tests.rs
poly-commit/src/linear_codes/univariate_ligero/: mod.rs  tests.rs
poly-commit/src/marlin/: mod.rs
poly-commit/src/marlin/marlin_pc/: data_structures.rs  mod.rs
poly-commit/src/marlin/marlin_pst13_pc/: combinations.rs  data_structures.rs  mod.rs
poly-commit/src/multilinear_pc/: data_structures.rs  mod.rs
poly-commit/src/sonic_pc/: data_structures.rs  mod.rs
poly-commit/src/streaming_kzg/: data_structures.rs  mod.rs  space.rs  tests.rs  time.rs
src/: README.md  challenge.rs  constraints.rs  data_structures.rs  error.rs  lib.rs  optional_rng.rs  pc_constraints.rs  utils.rs
src/bench_templates/: mod.rs
src/hyrax/: data_structures.rs  mod.rs  tests.rs  utils.rs
src/inner_product_arg/: data_structures.rs  mod.rs
src/ipa_pc/: data_structures.rs  mod.rs
src/ipa_pc/constraints/: data_structures.rs  mod.rs
src/kzg10/: check.rs  data_structures.rs  error.rs  fastpoly.rs  mod.rs  optional_rng.rs  subproductdomain.rs
src/lh_pc/: data_structures.rs  error.rs  mod.rs
src/lh_pc/linear_hash/: data_structures.rs  mod.rs
src/lh_pc/linear_hash/pedersen/: data_structures.rs  mod.rs
src/lh_pc/pedersen/: data_structures.rs
src/ligero/: data_structures.rs  mod.rs  tests.rs  utils.rs
src/linear_codes/: brakedown.rs  data_structures.rs  ligero.rs  mod.rs  utils.rs
src/linear_codes/multilinear_brakedown/: mod.rs  tests.rs
src/linear_codes/multilinear_ligero/: mod.rs  tests.rs
src/linear_codes/univariate_ligero/: tests.rs
src/marlin/: mod.rs
src/marlin/marlin_pc/: constraints.rs  data_structures.rs  mod.rs
src/marlin/marlin_pst13_pc/: combinations.rs  data_structures.rs  mod.rs
src/marlin_kzg10/: data_structures.rs  error.rs  mod.rs
src/marlin_pc/: constraints.rs  data_structures.rs  mod.rs
src/marlin_pst13/: data_structures.rs  mod.rs
src/multi_pc/: mod.rs  mpc_from_spc.rs
src/multilinear_pc/: data_structures.rs  mod.rs
src/pedersen/: data_structures.rs  mod.rs
src/pedersen_pc/: data_structures.rs  mod.rs  pedersen.rs
src/pedersen_pc/pedersen/: data_structures.rs  mod.rs
src/single_pc/: kzg10.rs  mod.rs
src/sonic/: data_structures.rs  error.rs  mod.rs
src/sonic_kzg10/: data_structures.rs  mod.rs
src/sonic_pc/: data_structures.rs  mod.rs
src/streaming_kzg/: data_structures.rs  mod.rs  space.rs  test.rs  tests.rs  time.rs
src/trivial_pc/: data_structures.rs  mod.rs  pedersen.rs
