[workspace]
members = ["poly-commit", "bench-templates"]
resolver = "2"


[workspace.package]
version = "0.5.0"
authors = ["arkworks contributors"]
description = "A library for constructing polynomial commitment schemes for use in zkSNARKs"
repository = "https://github.com/arkworks-rs/poly-commit"
documentation = "https://docs.rs/ark-poly-commit/"
keywords = ["cryptography", "commitments", "elliptic-curves", "pairing"]
include = ["Cargo.toml", "src", "README.md", "LICENSE-APACHE", "LICENSE-MIT"]
categories = ["cryptography"]
license = "MIT/Apache-2.0"
edition = "2018"

[workspace.dependencies]
ark-serialize = { version = "0.5.0", default-features = false }
ark-ff = { version = "0.5.0", default-features = false }
ark-ec = { version = "0.5.0", default-features = false }
ark-poly = { version = "0.5.0", default-features = false }
ark-crypto-primitives = { version = "0.5.0", default-features = false }
ark-std = { version = "0.5.0", default-features = false }
ark-relations = { version = "0.5.0", default-features = false }
ark-r1cs-std = { version = "0.5.0", default-features = false }
rand_chacha = { version = "0.3.0", default-features = false }

[profile.release]
opt-level = 3
lto = "thin"
incremental = true
debug = true

[profile.test]
opt-level = 3
debug-assertions = true
incremental = true
debug = true

# [patch.crates-io]
# ark-std = { git = "https://github.com/arkworks-rs/std/" }
# ark-ff = { git = "https://github.com/arkworks-rs/algebra/" }
# ark-ec = { git = "https://github.com/arkworks-rs/algebra/" }
# ark-serialize = { git = "https://github.com/arkworks-rs/algebra/" }
# ark-poly = { git = "https://github.com/arkworks-rs/algebra/" }

# ark-crypto-primitives = { git = "https://github.com/arkworks-rs/crypto-primitives/" }
# ark-r1cs-std = { git = "https://github.com/arkworks-rs/r1cs-std/" }

# ark-bls12-377 = { git = "https://github.com/arkworks-rs/algebra/" }
# ark-bls12-381 = { git = "https://github.com/arkworks-rs/algebra/" }
# ark-bn254 = { git = "https://github.com/arkworks-rs/algebra/" }
