[package]
name = "ark-pcs-bench-templates"
version.workspace = true
authors.workspace = true
repository.workspace = true
categories.workspace = true
include.workspace = true
license.workspace = true
edition.workspace = true
publish = false

[dependencies]
ark-poly-commit = { path = "../poly-commit", default-features = false }
ark-serialize = { workspace = true, features = [ "derive" ] }
ark-ff.workspace = true
ark-ec.workspace = true
ark-poly.workspace = true
ark-crypto-primitives = { workspace = true, features = ["sponge", "merkle_tree"] }
ark-std.workspace = true
rand_chacha.workspace = true

criterion = { version = "0.5", default-features = false }
paste = "1.0"
